# CV_editor

./: .env_sample  .gitignore  README.md  debug_utils.py  langgraph_agent.py  pyproject.toml  test.ipynb
agents/: cover_letter_pdf_generator.py  cover_letter_writer.py  critique.py  cv_pdf_generator.py  cv_writer.py  document_reader.py  job_description.py  latex_fixer.py  rag_agent.py  router.py  search.py  user_input.py
config/: __init__.py  agent_models.yaml  config_loader.py
data/portfolio/: portfolio.txt
job_description/: job_ad_text.txt
templates/: cover_letter_template.tex  cv_template.tex
