[project]
name = "cv-editor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "langgraph",
    "langchain",
    "ipykernel>=7.1.0",
    "langchain-openai>=1.0.2",
    "pypdf>=6.2.0",
    "pdfplumber>=0.11.8",
    "tavily>=1.1.0",
    "pygraphviz>=1.14",
]
